--- a/Hobee/src/main/webapp/resources/css/admin/adminMemberList.css
+++ b/Hobee/src/main/webapp/resources/css/admin/adminMemberList.css
@@ -308,6 +308,11 @@ td:last-child {
     transition: transform 0.2s, box-shadow 0.2s;
 }
 
+.stat-card.active {
+    border: 2px solid #2573ff;  /* 파란색 or 초록색 테두리 */
+    box-shadow: 0 4px 12px rgba(37, 115, 255, 0.2);
+}
+
 .stat-card:hover {
     transform: translateY(-4px);
     box-shadow: 0 4px 12px rgba(0,0,0,0.1);
