메인페이지 카테고리 hover시 transform 추가

--- a/Hobee/src/main/webapp/resources/css/main/main.css
+++ b/Hobee/src/main/webapp/resources/css/main/main.css
@@ -216,6 +216,7 @@ footer {
 }
 .category-item:hover {
 	color: #2672ff;
+	transform: translateY(-2px);
 }
 .category-item:hover i {
 	color: #2672ff;
