--- a/Hobee/src/main/webapp/resources/css/main/main.css
+++ b/Hobee/src/main/webapp/resources/css/main/main.css
@@ -93,28 +93,42 @@ main p {
 .course-info {
 	padding: 16px;
 }
+
+/*강의제목 말줄임표 2줄로 제한 */
+/* .course-title { */
+/* 	font-size: 1rem; */
+/* 	font-weight: 600; */
+/* 	color: #333; */
+/* 	height:44px; */
+/* 	margin-bottom: 4px; */
+/* 	line-height: 1.4; */
+/* 	overflow: hidden; */
+/* 	text-overflow: ellipsis; */
+/* 	display: -webkit-box; */
+/* 	-webkit-line-clamp: 2; */
+/* 	-webkit-box-orient: vertical; */
+/* } */
+
+/*강의제목 말줄임표 1줄로 제한 */
 .course-title {
-	font-size: 1rem;
-	font-weight: 600;
-	color: #333;
-	height:20px;
-	margin-bottom: 4px;
-	line-height: 1.4;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	display: -webkit-box;
-	-webkit-line-clamp: 2;
-	-webkit-box-orient: vertical;
+    font-size: 1rem;
+    font-weight: 600;
+    color: #333;
+    margin-bottom: 4px;
+    line-height: 1.4;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;  
 }
 .course-instructor {
 	font-size: 0.85rem;
 	color: #666;
-	margin-bottom: 5px;
+	margin-bottom: 10px;
 }
 .course-meta {
 	display: flex;
 	flex-direction: column;
-	gap: 5px;
+	gap: 8px;
 }
 .course-stats {
 	display: flex;
